--- a/app/src/main/res/layout/taoyu_fabu.xml
+++ b/app/src/main/res/layout/taoyu_fabu.xml
@@ -43,10 +43,11 @@
                         android:textSize="18dp" />
 
                     <EditText
+                        android:id="@+id/goods_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="123" />
+                        android:hint="商品名称" />
                 </LinearLayout>
 
                 <TextView
@@ -60,10 +61,11 @@
                     android:layout_height="204dp">
 
                     <EditText
+                        android:id="@+id/goods_desc"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
-                        android:hint="详细描述几成新，购买时间会引起更多人的关注哦！"
+                        android:hint="详细描述商品信息，购买时间会引起更多人的关注哦！"
                         android:textSize="15dp" />
 
                 </LinearLayout>
@@ -142,7 +144,8 @@
                         android:text="价格"
                         android:textSize="15dp" />
 
-                    <TextView
+                    <EditText
+                        android:id="@+id/goods_price"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="10dp"
@@ -150,7 +153,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1"
-                        android:text="¥0.00"
+                        android:text="¥0.00 元"
                         android:textSize="15dp" />
                 </LinearLayout>
 
@@ -177,6 +180,7 @@
                         android:textSize="15dp" />
 
                     <TextView
+                        android:id="@+id/goods_class"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="10dp"
@@ -187,14 +191,7 @@
                         android:text="请选择分类"
                         android:textSize="15dp" />
 
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/right_arrow" />
+
                 </LinearLayout>
 
                 <TextView
@@ -220,6 +217,7 @@
                         android:textSize="15dp" />
 
                     <EditText
+                        android:id="@+id/goods_school"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="10dp"
