--- a/app/src/main/res/layout/taoyu_fabutitle.xml
+++ b/app/src/main/res/layout/taoyu_fabutitle.xml
@@ -4,41 +4,48 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#fffffc">
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="1">
-    <ImageView
 
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0.5dp"
-        android:src="@drawable/fragment_back" />
-</LinearLayout>
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/go_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0.5dp"
+            android:src="@drawable/fragment_back" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_weight="1.00"
         android:gravity="center">
-    <TextView
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
 
-        android:text="发布"
-        android:textSize="25sp"/>
+
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:text="发布商品"
+            android:textSize="25sp" />
     </LinearLayout>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="44dp"
-    android:layout_weight="1.00"
-    android:gravity="center">
-    <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="提交"
-        android:textSize="25sp"
-        />
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_weight="1.00"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/goods_commit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="提交"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </LinearLayout>
