淘鱼 1..商品图片（多图）上传完成 2.商品查询开始修改完善， 修改完善布局文件

--- a/app/src/main/res/layout/taoyu_fabu.xml
+++ b/app/src/main/res/layout/taoyu_fabu.xml
@@ -40,7 +40,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="8"
                         android:text="标题"
-                        android:textSize="18dp" />
+                        android:textSize="15dp" />
 
                     <EditText
                         android:id="@+id/goods_name"
@@ -153,7 +153,6 @@
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1"
-                        android:text="¥0.00 元"
                         android:textSize="15dp" />
                 </LinearLayout>
 
@@ -212,11 +211,11 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="10dp"
-                        android:layout_weight="5"
-                        android:text="学校"
+                        android:layout_weight="3.2"
+                        android:text="校区"
                         android:textSize="15dp" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/goods_school"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
