--- a/app/src/main/res/layout/taoyu.xml
+++ b/app/src/main/res/layout/taoyu.xml
@@ -9,131 +9,127 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/taoyufragment">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
-    android:layout_weight="1">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2.5">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/touxiang"/>
-    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_marginTop="10dp"
+            android:layout_weight="5">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#999999" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="18838970227"
-                android:id="@+id/phone"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="XXX天前"
-                android:id="@+id/time"/>
+                android:layout_weight="2">
 
-        </LinearLayout>
-    <LinearLayout
-        android:layout_width="78dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="¥"
-            android:layout_gravity="right"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="36.00"
-            android:layout_gravity="right"
-            android:id="@+id/price"/>
+                <LinearLayout
+                    android:id="@+id/user_info_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:orientation="horizontal"
+                   >
+
+                    <com.gjf.lovezzu.view.CircleImageView
+                        android:layout_margin="5dp"
+                        android:id="@+id/goods_user_icon"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/def_avatar" />
+                    <TextView
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="用户昵称"
+                        android:id="@+id/goods_user_nickname"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_gravity="right"
+                    android:layout_weight="2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    >
+                    <LinearLayout
+                        android:gravity="center"
+                        android:layout_gravity="right"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <TextView
+                            android:gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textSize="15sp"
+                            android:text="¥"
+                            />
+                        <TextView
+                            android:gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textSize="18sp"
+                            android:text="36.00"
+                            android:id="@+id/goodsPrice"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
+
     </LinearLayout>
-</LinearLayout>
 
 
     </LinearLayout>
+
+
     <LinearLayout
+        android:id="@+id/goods_info"
         android:layout_width="match_parent"
         android:layout_height="126dp"
         android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp">
+        <TextView
+            android:textSize="18sp"
+            android:textColor="#000"
+            android:text="商品名字"
+            android:gravity="left"
+            android:id="@+id/goodsName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_weight="1"
           >
-
           <ImageView
-              android:id="@+id/taoyuimag"
+              android:id="@+id/goodsImg"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />
       </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginLeft="10dp"
-            >
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>  <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-
-
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="0.05">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/goods_des"
-            android:text="雨天"/>
 
-    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:background="#999999"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -149,40 +145,42 @@
             android:orientation="horizontal"
             android:layout_weight="1"
            >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/life_position"
-            android:scaleType="centerInside"
-            />
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="5dp"
-          android:layout_marginTop="5dp"
-          android:textSize="15dp"
-          android:text="位置"
-          android:id="@+id/position"/>
-        </LinearLayout>
-            <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="3">
-
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/life_position"
                 android:scaleType="centerInside"
-                android:layout_gravity="right"
-                android:background="@drawable/life_zan"
                 />
             <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:textSize="15dp"
+            android:text="位置"
+             android:id="@+id/goodsPosition"/>
+        </LinearLayout>
+
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="0"
-                android:gravity="center"
-                android:id="@+id/zan"/>
+                android:orientation="horizontal"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:id="@+id/zan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="right"
+                    android:background="@drawable/life_zan"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="0"
+                    android:gravity="center"
+                    android:id="@+id/goodsZan"/>
 
 
         </LinearLayout>
@@ -196,6 +194,7 @@
             android:layout_weight="3">
 
             <ImageView
+                android:id="@+id/comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
@@ -208,7 +207,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="0"
-                android:id="@+id/comment"/>
+                android:id="@+id/goodsComment"/>
 
 
         </LinearLayout>
