淘鱼查询发布基本完成 1..主界面（学习、出行、娱乐）查询展示 话题圈 1.完善布局文件

--- a/app/src/main/res/layout/taoyu_goods_traffic_type_fragment.xml
+++ b/app/src/main/res/layout/taoyu_goods_traffic_type_fragment.xml
@@ -2,11 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/taoyu_traffic_list_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+      >
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/taoyu_traffic_list">
 
     </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
