--- a/app/src/main/res/layout/talk_view.xml
+++ b/app/src/main/res/layout/talk_view.xml
@@ -32,6 +32,11 @@
 
 
     </LinearLayout>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="10">
+
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/talk_refresh"
@@ -70,4 +75,15 @@
 
         </LinearLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:scaleType="centerInside"
+            android:background="@drawable/topic"
+            android:id="@+id/Topicpub"
+            android:layout_centerVertical="true"
+            android:layout_margin="25dp"/>
+</FrameLayout>
 </LinearLayout>
