--- a/app/src/main/res/layout/taoyu.xml
+++ b/app/src/main/res/layout/taoyu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+    android:id="@+id/taoyu_item"
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
+        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -21,7 +23,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="3dp"
                 android:background="#999999" />
 
             <LinearLayout
@@ -94,10 +96,11 @@
 
 
     <LinearLayout
+        android:layout_weight="6"
         android:id="@+id/goods_info"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp">
@@ -107,17 +110,18 @@
             android:text="商品名字"
             android:gravity="left"
             android:id="@+id/goodsName"
+            android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
       <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="6"
           >
           <ImageView
               android:id="@+id/goodsImg"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" />
+              android:layout_height="200dp" />
       </LinearLayout>
 
     </LinearLayout>
@@ -136,7 +140,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="0.03"
+        android:layout_weight="1"
         android:orientation="horizontal"
         >
         <LinearLayout
