--- a/app/src/main/res/layout/taoyu_title.xml
+++ b/app/src/main/res/layout/taoyu_title.xml
@@ -11,8 +11,8 @@
         android:layout_weight="1">
         <ImageView
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginLeft="0.5dp"
             android:src="@drawable/fragment_back" />
     </LinearLayout>
@@ -33,12 +33,14 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:layout_weight="1">
         <TextView
+            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:text="搜索"
             android:id="@+id/taoyu_activity_search"
             />
