淘鱼 1.等待商品详情页 2.购物车待定 话题圈 1.完善布局文件 2.发布话题圈图片选择

--- a/app/src/main/res/layout/topic_pub.xml
+++ b/app/src/main/res/layout/topic_pub.xml
@@ -15,6 +15,7 @@
                android:id="@+id/topic_pub_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
+               android:textSize="17sp"
                android:text="取消"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
@@ -27,9 +28,12 @@
                 android:text="发表话题"
                 android:textSize="20sp" />
             <TextView
+                android:id="@+id/topic_pub_commit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="发表"
+                android:textSize="17sp"
+                android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
@@ -37,6 +41,7 @@
 
     </LinearLayout>
     <FrameLayout
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="6"
@@ -48,30 +53,95 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+
             >
             <TextView
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="话题题目:"
                 />
             <EditText
-                android:layout_width="match_parent"
+                android:id="@+id/topic_name"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="8"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="123"/>
 
         </LinearLayout>
-
-            <FrameLayout
+            <include
+                layout="@layout/item_cut"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        android:hint="请输入你的话题内容~" />
+                <EditText
+                    android:id="@+id/topic_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="true"
+                    android:gravity="top"
+                    android:hint="发布话题的内容"
+                    android:inputType="textMultiLine"
+                    android:maxLines="10"
+                    android:minLines="8"
+                    android:maxLength="140"
+                    android:scrollbars="vertical" />
+                <include
+                    layout="@layout/item_cut"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp" />
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            </FrameLayout>
+                    <FrameLayout
+                        android:id="@+id/topic_publish_addimage"
+                        android:layout_width="100dp"
+                        android:layout_height="67dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:text="添加图片"
+                            android:textSize="16dp" />
+
+                        <ImageView
+
+                            android:layout_width="62dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/taoyu_add"
+                            android:scaleType="matrix" />
+
+
+                    </FrameLayout>
+
+                    <LinearLayout
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/topic_publish_images"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+            </LinearLayout>
+
         </LinearLayout>
     </FrameLayout>
 
