淘鱼 1.商品详情页完成 2.查询商品完成 3.发布一级评论完成

--- a/app/src/main/res/layout/taoyu_goods_list_item1.xml
+++ b/app/src/main/res/layout/taoyu_goods_list_item1.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/taoyu_list"
+    <ImageView
+        android:id="@+id/goods_images_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
