--- a/app/src/main/res/layout/tree_hole_view.xml
+++ b/app/src/main/res/layout/tree_hole_view.xml
@@ -68,8 +68,7 @@
             android:layout_height="80dp"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
-            android:src="@drawable/pub_tree"
-            />
+            android:src="@drawable/pub_tree" />
 
     </FrameLayout>
 
