--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -1,141 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gjf.lovezzu.activity.taoyu.TaoyuDetialActivity"
-    android:orientation="vertical">
+    tools:context="com.gjf.lovezzu.activity.taoyu.TaoyuDetialActivity">
 
-    <include
-        layout="@layout/item_cut"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="1dp" />
+        android:layout_height="match_parent">
 
-<android.support.v7.widget.RecyclerView
-    android:layout_margin="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="4"
-    android:id="@+id/goods_photo_recycler">
-
-</android.support.v7.widget.RecyclerView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="2">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <include
+                layout="@layout/item_cut"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/goods_photo_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_margin="5dp"
+                android:layout_weight="4">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#999999" />
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_margin="5dp"
-                    android:id="@+id/goods_name"
-                    android:layout_width="268dp"
-                    android:layout_height="wrap_content"
-                    android:text="商品名称呀呀嘿"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                   />
-
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical">
 
                 <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                    >
-                <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                    android:textColor="#f77a31"
-                android:text="￥"
-                android:textSize="15sp"
-                android:layout_margin="5dp" />
-            <TextView
-                android:id="@+id/goods_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="123"
-                android:textColor="#f77a31"
-                android:textSize="25sp"
-               android:layout_gravity="center"
-                />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_margin="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_margin="5dp"
-                android:layout_gravity="right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1"
-                >
-                <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:background="@drawable/life_position"
-                    android:scaleType="centerInside"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="5dp"
-                    android:textSize="10dp"
-                    android:text="位置"
-                    android:id="@+id/goodsPosition"/>
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/goods_name"
+                            android:layout_width="268dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="6dp"
+                            android:text="商品名称呀呀嘿"
+                            android:textSize="20sp" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="5dp"
+                                android:text="￥"
+                                android:textColor="#f77a31"
+                                android:textSize="15sp" />
+
+                            <TextView
+                                android:id="@+id/goods_price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="123"
+                                android:textColor="#f77a31"
+                                android:textSize="25sp" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right"
+                            android:layout_margin="5dp"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="15dp"
+                                android:layout_height="15dp"
+                                android:background="@drawable/life_position"
+                                android:scaleType="centerInside" />
+
+                            <TextView
+                                android:id="@+id/goodsPosition"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginTop="5dp"
+                                android:text="位置"
+                                android:textSize="10dp" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="#999999" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="宝贝介绍："
+                            android:textColor="#000"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:id="@+id/goods_desc"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="这是描述啊呀为拉拉阿拉拉拉阿鲁露露露露露露露露露露露露露露露露露露露露露露露露露露露露露露"
+                            android:textSize="17sp" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/goods_talks"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp">
+
+                </android.support.v7.widget.RecyclerView>
+
+
             </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="宝贝介绍："
-                android:textSize="15sp"
-                android:layout_margin="5dp"/>
-            <TextView
-                android:id="@+id/goods_desc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="这是描述啊呀为拉拉阿拉拉拉阿鲁露露露露露露露露露露露露露露露露露露露露露露露露露露露露露露"
-                android:layout_margin="5dp"
-                android:textSize="17sp"/>
+
+
         </LinearLayout>
+    </ScrollView>
 
-
-
-    </LinearLayout>
-    <FrameLayout
-        android:layout_margin="5dp"
+    <LinearLayout
+        android:layout_gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3">
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/goods_talks"
-    android:layout_margin="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-</android.support.v7.widget.RecyclerView>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:scaleType="centerInside"
-        android:background="@drawable/buybutton"
-        android:id="@+id/buybutton"
-        android:layout_centerVertical="true"
-        android:layout_margin="25dp"/>
-</FrameLayout>
-</LinearLayout>
+        android:layout_height="wrap_content">
+        <include layout="@layout/topic_botton"/>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/buybutton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_gravity="end|bottom"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/buybutton"
+        android:scaleType="centerInside" />
+
+
+</FrameLayout>
