--- a/app/src/main/res/layout/taoyu_activity.xml
+++ b/app/src/main/res/layout/taoyu_activity.xml
@@ -16,7 +16,7 @@
     <include
         layout="@layout/taoyu_type_title"
         android:layout_width="match_parent"
-        android:layout_height="70dp" />
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,22 +26,22 @@
             android:id="@+id/id_taoyuactivity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/taoyu_publish_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/taoyu_pub"
-            app:fabSize="normal"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="17dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="18dp"
             android:layout_marginEnd="17dp"
-            android:layout_marginBottom="18dp" />
+            android:layout_marginRight="17dp"
+            android:src="@drawable/taoyu_pub"
+            app:fabSize="normal" />
 
     </RelativeLayout>
 
