--- a/app/src/main/res/layout/taoyu_fabu.xml
+++ b/app/src/main/res/layout/taoyu_fabu.xml
@@ -40,7 +40,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="8"
                         android:text="标题"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/goods_name"
@@ -66,7 +66,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:hint="详细描述商品信息，购买时间会引起更多人的关注哦！"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
@@ -89,7 +89,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
                             android:text="添加商品"
-                            android:textSize="16dp" />
+                            android:textSize="16sp" />
 
                         <ImageView
 
@@ -140,20 +140,17 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="10dp"
-                        android:layout_weight="5"
+                        android:layout_weight="3.2"
                         android:text="价格"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <EditText
                         android:id="@+id/goods_price"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginTop="10dp"
                         android:layout_weight="1"
-                        android:textSize="15dp" />
+                        android:hint="999"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <TextView
@@ -176,7 +173,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_weight="3.2"
                         android:text="分类"
-                        android:textSize="15dp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/goods_class"
