--- a/app/src/main/res/layout/taoyu_fabutitle.xml
+++ b/app/src/main/res/layout/taoyu_fabutitle.xml
@@ -6,14 +6,16 @@
     android:background="#fffffc">
 
     <LinearLayout
+        android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1">
 
         <ImageView
+            android:layout_gravity="center_vertical"
             android:id="@+id/go_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="0.5dp"
             android:src="@drawable/fragment_back" />
     </LinearLayout>
