--- a/app/src/main/res/layout/taoyu_goods_list_item2.xml
+++ b/app/src/main/res/layout/taoyu_goods_list_item2.xml
@@ -14,44 +14,40 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="horizontal">
 
-            android:layout_height="wrap_content">
+            <com.gjf.lovezzu.view.CircleImageView
+                android:id="@+id/goods_comm_user_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:src="@drawable/def_avatar" />
 
-            <ImageView
-                android:id="@+id/topic2_dis_touxiang"
-                android:layout_width="61dp"
-                android:layout_height="79dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside" />
+            <TextView
+                android:id="@+id/goods_comm_user_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:text="用户昵称" />
         </LinearLayout>
 
 
         <LinearLayout
+            android:id="@+id/comment_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
 
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/topic2_dis_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:text="这是昵称啊"
-                    android:textColor="#000000"
-                    android:textSize="22sp" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,7 +55,7 @@
                 android:layout_marginTop="12dp">
 
                 <TextView
-                    android:id="@+id/topic2_dis_content"
+                    android:id="@+id/doods_comm_content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
@@ -81,33 +77,16 @@
                     android:layout_height="match_parent"
                     android:layout_weight="2.5">
 
+
                     <TextView
-                        android:id="@+id/topic2_dis_floor"
+                        android:id="@+id/goods_comm_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:text="XX" />
+                        android:text="XXXX.XX.XX" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="楼 ·" />
 
-                    <TextView
-                        android:id="@+id/topic2_dis_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="5dp"
-                        android:text="XXX" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="前" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -118,10 +97,10 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/life_zan" />
+                        android:background="@drawable/comment" />
 
                     <TextView
-                        android:id="@+id/topic2_dis_zan"
+                        android:id="@+id/goods_comm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
