--- a/app/src/main/res/layout/taoyu_search_title.xml
+++ b/app/src/main/res/layout/taoyu_search_title.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="70dp"
+    android:orientation="horizontal"
     android:paddingTop="30dp">
 
     <EditText
+        android:id="@+id/taoyu_search_title"
         android:layout_width="316dp"
         android:layout_height="wrap_content"
-        android:id="@+id/taoyu_search_title"
-        android:hint="请输入内容"/>
+        android:hint="请输入内容" />
+
     <TextView
+        android:id="@+id/taoyu_search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="搜索"
         android:gravity="center"
-        android:id="@+id/taoyu_search_button"
-        android:textSize="20sp"/>
+        android:text="搜索"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
