--- a/app/src/main/res/layout/topic_main.xml
+++ b/app/src/main/res/layout/topic_main.xml
@@ -1,88 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:orientation="vertical">
+
         <TextView
+            android:id="@+id/topic2main_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
             android:text="这是话题圈的总名字"
             android:textColor="#000000"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:id="@+id/topic2main_title"/>
+            android:textSize="25sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
             <TextView
+                android:id="@+id/topic2main_time"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="XX天前"
-                android:id="@+id/topic2main_time"/>
+                android:text="XX天前" />
 
             <TextView
                 android:id="@+id/topic2main_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="这是名字"
-                android:textColor="#0099ff"
                 android:layout_marginLeft="10dp"
-                />
+                android:text="这是名字"
+                android:textColor="#0099ff" />
 
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/topic2main_context"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="这是内容,有很多字呀骄傲的技巧我都哇文化低奇偶发动机佛平均哦评价佛牌绝望坡附近哦陪我减肥哦评价我二姐夫"
-                android:textSize="20sp"
                 android:layout_weight="2"
-                android:id="@+id/topic2main_context"
-                />
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/topic2_img"/>
+                android:text="这是内容,有很多字呀骄傲的技巧我都哇文化低奇偶发动机佛平均哦评价佛牌绝望坡附近哦陪我减肥哦评价我二姐夫"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/topic2_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:orientation="horizontal">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="关注" />
+
             <TextView
-                android:layout_marginLeft="5dp"
+                android:id="@+id/topic2main_guanzhunum"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="12346"
-                android:id="@+id/topic2main_guanzhunum"/>
+                android:layout_marginLeft="5dp"
+                android:text="12346" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="13dp"
-                android:text="讨论数"
-                />
+                android:text="讨论数" />
+
             <TextView
+                android:id="@+id/topic2main_taolunnum"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="123456"
                 android:layout_marginLeft="5dp"
-                android:id="@+id/topic2main_taolunnum"/>
+                android:text="123456" />
         </LinearLayout>
 
     </LinearLayout>
