--- a/app/src/main/res/layout/topic_pub.xml
+++ b/app/src/main/res/layout/topic_pub.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,15 +13,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-           <TextView
-               android:id="@+id/topic_pub_back"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:textSize="17sp"
-               android:text="取消"
-               android:layout_alignParentLeft="true"
-               android:layout_centerVertical="true"
-               android:layout_marginLeft="10dp"/>
+            <TextView
+                android:id="@+id/topic_pub_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:text="取消"
+                android:textSize="17sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -27,59 +29,66 @@
                 android:layout_centerInParent="true"
                 android:text="发表话题"
                 android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/topic_pub_commit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发表"
-                android:textSize="17sp"
-                android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:text="发表"
+                android:textSize="17sp" />
         </RelativeLayout>
 
 
     </LinearLayout>
+
     <FrameLayout
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="6"
-       >
+        android:layout_margin="10dp"
+        android:layout_weight="6">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
 
-            >
-            <TextView
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="话题题目:"
-                />
-            <EditText
-                android:id="@+id/topic_name"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="123"/>
 
-        </LinearLayout>
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="话题题目:" />
+
+                <EditText
+                    android:id="@+id/topic_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="8"
+                    android:text="123" />
+
+            </LinearLayout>
+
             <include
                 layout="@layout/item_cut"
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
+
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
                 <EditText
                     android:id="@+id/topic_content"
                     android:layout_width="match_parent"
@@ -88,18 +97,20 @@
                     android:gravity="top"
                     android:hint="发布话题的内容"
                     android:inputType="textMultiLine"
+                    android:maxLength="140"
                     android:maxLines="10"
                     android:minLines="8"
-                    android:maxLength="140"
                     android:scrollbars="vertical" />
+
                 <include
                     layout="@layout/item_cut"
                     android:layout_width="match_parent"
                     android:layout_height="1dp" />
+
                 <LinearLayout
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <FrameLayout
@@ -129,9 +140,10 @@
                     </FrameLayout>
 
                     <LinearLayout
-                        android:layout_weight="1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/topic_publish_images"
                             android:layout_width="match_parent"
@@ -144,7 +156,6 @@
 
         </LinearLayout>
     </FrameLayout>
-
 
 
 </LinearLayout>
