--- a/app/src/main/res/layout/tree_add_view.xml
+++ b/app/src/main/res/layout/tree_add_view.xml
@@ -52,34 +52,39 @@
         android:gravity="top"
         android:hint="说说咱学校的事～～"
         android:inputType="textMultiLine"
+        android:maxLength="140"
         android:maxLines="10"
         android:minLines="8"
-        android:maxLength="140"
         android:scrollbars="vertical" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
-            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:gravity="center"
-            android:text="趁着年轻好好努力"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <LinearLayout
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="趁着年轻好好努力" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true">
+
             <TextView
                 android:id="@+id/add_tree_textNumber"
-                android:text="0"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="0" />
+
             <TextView
-                android:text="/140"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="/140" />
         </LinearLayout>
 
     </RelativeLayout>
