--- a/app/src/main/res/layout/userlogin_fragment.xml
+++ b/app/src/main/res/layout/userlogin_fragment.xml
@@ -3,153 +3,138 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:orientation="vertical"
     android:background="@drawable/login_bg"
-   >
+    android:orientation="vertical">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-
         <LinearLayout
-            android:id="@+id/my_user_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-           >
-
-            <include layout="@layout/login_title_view" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/my_user_reg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="180dp"
-            android:layout_weight="9"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:orientation="vertical">
 
+
             <LinearLayout
+                android:id="@+id/my_user_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <include layout="@layout/login_title_view" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/my_user_reg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:paddingRight="50dp">
+                android:layout_marginTop="180dp"
+                android:layout_weight="9"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:paddingRight="50dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/login_phone" />
+
+                    <EditText
+                        android:id="@+id/user_reg_phone"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:hint="请输入手机号" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:paddingRight="50dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/login_pass" />
+
+                    <EditText
+                        android:id="@+id/user_reg_password"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:hint="请输入6-20位密码"
+                        android:inputType="textPassword"
+                        android:maxLines="1" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/user_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginRight="60dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/user_login"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/login_phone" />
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="1dp">
 
-                <EditText
-                    android:id="@+id/user_reg_phone"
+                    <TextView
+                        android:id="@+id/new_user_reg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="新用户注册"
+                        android:textColor="#0090FD"
+                        android:textSize="20sp" />
 
+                    <TextView
+                        android:id="@+id/user_forget_pass"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="忘记密码？"
+                        android:textColor="#0090FD"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:hint="请输入手机号" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:paddingRight="50dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/login_pass" />
-
-                <EditText
-                    android:inputType="textPassword"
-                    android:id="@+id/user_reg_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:hint="请输入6-20位密码"
-                    android:maxLines="1" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/user_login"
-                android:id="@+id/user_login"
-                android:layout_gravity="center">
-
-                <!--<TextView-->
-                <!--android:id="@+id/user_login_button"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="5dp"-->
-                <!--android:layout_marginLeft="15dp"-->
-                <!--android:layout_marginRight="15dp"-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:layout_weight="2"-->
-                <!--android:background="#0090FD"-->
-                <!--android:gravity="center"-->
-                <!--android:text="登    录"-->
-                <!--android:textColor="#fff"-->
-                <!--android:textSize="25sp" />-->
+                    android:layout_weight="4" />
             </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="1dp">
-
-                <TextView
-                    android:id="@+id/new_user_reg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="新用户注册"
-                    android:textColor="#0090FD"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/user_forget_pass"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="忘记密码？"
-                    android:textColor="#0090FD"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4" />
         </LinearLayout>
-
-
-    </LinearLayout>
     </ScrollView>
 </RelativeLayout>
