--- a/app/src/main/res/layout/wheel_view.xml
+++ b/app/src/main/res/layout/wheel_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <com.gjf.lovezzu.view.WheelView
         android:id="@+id/wheel_view_wv"
@@ -12,33 +12,36 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#0288ce"/>
+        android:background="#0288ce" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/txt_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="16sp"
-            android:text="取消"/>
+            android:text="取消"
+            android:textSize="16sp" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#0288ce"/>
+            android:background="#0288ce" />
+
         <TextView
             android:id="@+id/txt_sure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="16sp"
             android:padding="10dp"
-            android:text="确定"/>
+            android:text="确定"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </LinearLayout>
