淘鱼 1.一级评论与二级评论的点赞发布完成 话题圈 修改实体类、adapter、布局文件

--- a/app/src/main/res/layout/goods_child_comm_item.xml
+++ b/app/src/main/res/layout/goods_child_comm_item.xml
@@ -104,6 +104,7 @@
                     android:layout_weight="1">
 
                     <ImageView
+                        android:id="@+id/do_comm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/comment" />
@@ -116,6 +117,7 @@
                         android:layout_marginLeft="8dp"
                         android:text="XXX" />
                     <ImageView
+                        android:id="@+id/do_zan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/life_zan" />
