--- a/app/src/main/res/layout/main_my_user_view.xml
+++ b/app/src/main/res/layout/main_my_user_view.xml
@@ -27,18 +27,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/user_sex"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/male" />
-
             <TextView
+                android:id="@+id/user_nick_name"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="签到"
+                android:text="昵称"
                 android:textColor="@color/colorPrimary" />
         </LinearLayout>
 
