--- a/app/src/main/res/layout/society_item.xml
+++ b/app/src/main/res/layout/society_item.xml
@@ -1,60 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingTop="10dp"
-   >
-
-
-    <ImageView
-        android:id="@+id/in_society_image"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"/>
-
+    android:layout_margin="5dp"
+    app:cardCornerRadius="4dp">
     <LinearLayout
-        android:id="@+id/society_text"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/in_society_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:textSize="20sp" />
-
         <LinearLayout
-            android:id="@+id/in_society_info"
+            android:id="@+id/news_body"
+            android:layout_weight="9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/in_society_date"
-                android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:id="@+id/news_image"/>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|bottom"
-                android:gravity="left" />
-
-            <TextView
-                android:id="@+id/in_society_read"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|bottom"
-                android:layout_weight="1"
-                android:gravity="right" />
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <TextView
+                    android:textColor="#303030"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="标题"
+                    android:textSize="16sp"
+                    android:id="@+id/news_title"
+                    android:layout_margin="5dp"
+                    />
+                <TextView
+                    android:id="@+id/news_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="描述描述描述描述"
+                    android:ellipsize="end"
+                    android:maxEms="18"
+                    android:maxLines="3"
+                    android:textSize="14sp"
+                    android:layout_margin="5dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+                    <TextView
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="123"
+                        android:layout_weight="1"
+                        android:textSize="13sp"
+                        android:id="@+id/news_time"/>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
