--- a/app/src/main/res/layout/taoyu.xml
+++ b/app/src/main/res/layout/taoyu.xml
@@ -74,15 +74,18 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
+                                android:textColor="#fa851e"
                                 android:text="¥"
                                 android:textSize="15sp" />
 
                             <TextView
+                                android:layout_marginLeft="5dp"
                                 android:id="@+id/goodsPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
                                 android:text="36.00"
+                                android:textColor="#fa851e"
                                 android:textSize="18sp" />
                         </LinearLayout>
 
@@ -171,30 +174,6 @@
                     android:layout_marginTop="5dp"
                     android:text="位置"
                     android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/zan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:background="@drawable/life_zan"
-                    android:scaleType="centerInside" />
-
-                <TextView
-                    android:id="@+id/goodsZan"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="0" />
-
-
             </LinearLayout>
 
 
