--- a/app/src/main/res/layout/taoyu_goods_list_item2.xml
+++ b/app/src/main/res/layout/taoyu_goods_list_item2.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -68,6 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ellipsize="end"
+                    android:maxEms="18"
+                    android:maxLines="4"
                     android:text="这是讨论啊啊."
                     android:textSize="18sp" />
 
