--- a/app/src/main/res/layout/topic_info_title.xml
+++ b/app/src/main/res/layout/topic_info_title.xml
@@ -25,6 +25,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/topic_info_tilte"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
