--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -40,6 +40,17 @@
             android:id="@+id/shop_car_delete"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"/>
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="编辑"
+            android:gravity="right"
+            android:textSize="19sp"
+            android:id="@+id/shop_car_count"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"/>
+
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
