更换轮播控件 接入轮播接口 话题圈修改布局、发布一级主题、上传图片

--- a/app/src/main/res/layout/goods_child_comm_item.xml
+++ b/app/src/main/res/layout/goods_child_comm_item.xml
@@ -99,11 +99,13 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_margin="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
 
                     <ImageView
+                        android:layout_margin="5dp"
                         android:id="@+id/do_comm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -117,6 +119,7 @@
                         android:layout_marginLeft="8dp"
                         android:text="XXX" />
                     <ImageView
+                        android:layout_margin="5dp"
                         android:id="@+id/do_zan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
