--- a/app/src/main/res/layout/inchool_school_view.xml
+++ b/app/src/main/res/layout/inchool_school_view.xml
@@ -1,57 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+<com.bigkoo.convenientbanner.ConvenientBanner
+    android:id="@+id/school_flush"
+    android:layout_margin="5dp"
+    app:canLoop="true"
+    android:layout_width="match_parent"
+    android:layout_height="200dp"/>
 
-    <com.bigkoo.convenientbanner.ConvenientBanner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/school_flush"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="5dp"
-        app:canLoop="true"
-    />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_weight="15"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="资讯速递" />
-
-
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/last_school_content_flash"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/last_school_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-            </android.support.v4.widget.SwipeRefreshLayout>
-        </LinearLayout>
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -59,10 +25,8 @@
             <ListView
                 android:id="@+id/last_school_listview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></ListView>
+                android:layout_height="match_parent"/>
         </LinearLayout>
-
-
     </LinearLayout>
 
 </LinearLayout>
