--- a/app/src/main/res/layout/life_fragment.xml
+++ b/app/src/main/res/layout/life_fragment.xml
@@ -25,17 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.17">
 
-        <!--<com.gc.flashview.FlashView
-            android:id="@+id/life_flush"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_weight="1" />-->
         <com.bigkoo.convenientbanner.ConvenientBanner
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/life_flush"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_weight="1"
+
             app:canLoop="true"
         />
     </LinearLayout>
@@ -49,7 +44,8 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="198dp"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -183,14 +179,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:orientation="vertical">
 
 
             <LinearLayout
                 android:id="@+id/life_talk"
                 android:layout_width="match_parent"
-                android:layout_height="74dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -204,7 +200,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:text="话题圈"
                         android:textColor="#000000"
                         android:textSize="20dp" />
@@ -227,10 +223,6 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4" />
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -238,7 +230,7 @@
                         android:layout_marginBottom="5dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="20dp"
                         android:scaleType="centerInside"
                         android:src="@drawable/life_talk" />
                 </LinearLayout>
@@ -253,7 +245,7 @@
             <LinearLayout
                 android:id="@+id/life_shudong"
                 android:layout_width="match_parent"
-                android:layout_height="67dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -312,7 +304,7 @@
             <LinearLayout
                 android:id="@+id/life_jianzhi"
                 android:layout_width="match_parent"
-                android:layout_height="79dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
